Compiler/tests/syntax/good/testfile-bang-2.rs

fn main() { let a : Vec<i32> = vec![ 1 , 2 , 3 ]; return; }
