Compiler/tests/syntax/bad/testfile-nonassoc-1.rs
fn main() { let a = true == 1 < 2; }
